force-app/main/default/objects/CWS_Address__c/CWS_Address__c.object-meta.xml
<CustomObject>
    <description>Custom address object for account</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADDR-{00000000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>