force-app/main/default/objects/CWS_Address__c/fields/CWS_Active__c.field-meta.xml
<CustomField>
    <fullName>CWS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>