force-app/main/default/objects/CWS_Address__c/fields/CWS_City__c.field-meta.xml
<CustomField>
    <fullName>CWS_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>