force-app/main/default/objects/CWS_Address__c/fields/CWS_Country__c.field-meta.xml
<CustomField>
    <fullName>CWS_Country__c</fullName>
    <description>Used to select country for the address</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Country</valueSetName>
    </valueSet>
</CustomField>