force-app/main/default/objects/CWS_Address__c/fields/CWS_legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>