force-app/main/default/objects/CWS_Address__c/fields/CWS_Source_System__c.field-meta.xml
<CustomField>
    <fullName>CWS_Source_System__c</fullName>
    <label>Legacy Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>