force-app/main/default/objects/CWS_Address__c/fields/CWS_State__c.field-meta.xml
<CustomField>
    <fullName>CWS_State__c</fullName>
    <description>Used to select the state for the address</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CWS_State</valueSetName>
    </valueSet>
</CustomField>