force-app/main/default/objects/CWS_Address__c/fields/CWS_Street__c.field-meta.xml
<CustomField>
    <fullName>CWS_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>