force-app/main/default/objects/CWS_Address__c/fields/CWS_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>CWS_Zipcode__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>